后端代码优化：PaymentService兼容性修复、大模型API切换为讯飞星火、数据库新增AI对话表和营养字段、更新API文档